--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,22 @@ services:
     build: ./php
     volumes:
       - ./src:/var/www/html
+    depends_on: 
+      - db
   
+  db: 
+    image: mysql:8.0
+    environment:
+      - MYSQL_DATABASE=app-database
+      - MYSQL_USER=test
+      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=secret
+      - TZ='Asia/Tokyo'
+    volumes:
+      - db-store:/var/lib/mysql
+      - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./logs:/var/log/mysql
+
+volumes:
+  db-store:
+    
