--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - db-store:/var/lib/mysql
       - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./logs:/var/log/mysql
+    ports: 
+      - 3307:3306
 
 volumes:
   db-store:
